fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,6 @@ body::-webkit-scrollbar {
 }
 body::-webkit-scrollbar-thumb {
   height: 56px;
-
   background: #909090;
   border-radius: 8px;
   background-clip: content-box;
@@ -106,14 +105,18 @@ body::-webkit-scrollbar-thumb {
 }
 .custom-scroll::-webkit-scrollbar {
   height: 10px;
-  width: 8px;
+  width: 16px;
+  background: transparent;
 }
 .custom-scroll::-webkit-scrollbar-thumb {
   height: 56px;
   border-radius: 8px;
-  border: 4px solid transparent;
+  border: 5px solid transparent;
   background-clip: content-box;
-  background: #909090;
+  background-color: transparent;
+}
+.custom-scroll:hover::-webkit-scrollbar-thumb {
+  background-color: #909090;
 }
 
 /*------------------------
